--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "lsiwh37249", email = "lsiwh37249@gmail.com"},
 ]
 dependencies = []
-requires-python = ">=3.11.*"
+requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
 
